# EE569-ImageProcessing

./: EE569_hw2_6761040585_Yang_Meiyi_code.txt  EE569_hw3_6761040585_Yang_Meiyi_code.txt  EE569_hw4_6761040585_Yang_Meiyi_code.txt  EE569_hw4_6761040585_Yang_Meiyi_report.docx  README.md
569_HW1/: CMakeLists.txt  Makefile  README.txt  p1_bilinear.cpp  p3_guided.cpp  p3_median.cpp
569_HW1/Image_read/: fruit_shop_CFA.raw  jet.raw  the_starry_night.raw
569_HW1/Image_write/: p1_MHC1.raw  p1_bilinear.raw  p1_resize.raw  p2_oilpainting_barn_512.raw  p2_oilpaintint_nofilter.raw  p2b_PDF_blue.txt  p2b_PDF_green.txt  p2b_PDF_red.txt  p3_filter_GG.raw  p3_filter_GM.raw  p3_filter_MG.raw  p3_filter_MM.raw  p3_guided_4.raw  p3_guided_5.raw  p3_guided_6.raw  p3_guided_7.raw  p3_guided_8.raw
569_HW2/: .cproject  (+11 more)
569_HW2/p1/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  hw2_helper.h  p1a.cpp  test.raw  test_img_file_print.txt  test_img_raw_write.raw  test_mat_file_print.txt  test_mat_xml_print.txt  text3.txt
569_HW2/p2/: CMakeLists.txt  Makefile  test.txt
569_HW2/p3/: CMakeLists.txt  EE569_hw2_6761040585_Yang_Meiyi_code.txt  Makefile  test_mat.txt
HW1/: CMakeLists.txt  Makefile  README.txt  Report.txt  cumulative.cpp  cumulative.h  example.cpp  helper.cpp  helper.h  hw1_helper.cpp  hw1_helper.h  image_plot_all_line1.txt  image_plot_all_line2.txt  main.cpp  output_p1b2.raw  p1_MHC  p1_MHC.cpp  p1_bilinear  p1_bilinear.cpp  p1_demosaicing.cpp  p1_resize.cpp  p1_resize.raw  p2_cumulative.cpp  p2_oilpainting  p2_oilpainting.cpp  p2_transfer  p2_transfer.cpp  p3_gaussian.cpp  p3_guided  p3_guided.cpp  p3_median.cpp  parrot_CFA.raw  temp.txt  ~$569_hw1_6761040585_Meiyi Yang.docx
HW1/Debug/: image_plot_all_line_output2.txt  image_plot_all_line_output3.txt
HW1/Image_read/: coliseum.raw  peppers_noisy.raw  yosemite.raw
HW1/Image_write/: image_plot_all_line_output3.txt  image_print_by_interger.txt  output1_MHC1.raw  output1_MHC1_bug.raw  output1_MHC2.raw  output1_bilinear1.raw  p1_MHC.raw  p1_bilinear.raw  p1_resize.raw  p2_filter_G3.raw  p2_filter_G5.raw  p2_filter_GG.raw  p2_filter_GM.raw  p2_filter_MG.raw  p2_filter_MM.raw  p2_oilpainting.raw  p2_oilpaintint_nofilter.raw  p2_transfer.raw  p2b_NUM_PDF_blue.txt  p2b_NUM_PDF_green.txt  p2b_NUM_PDF_red.txt  p2b_PDF_blue.txt  p2b_PDF_green.txt  p2b_PDF_red.txt  p3_gaussian.raw
HW1/Result/: p1_bilinear.raw
(+802 files in other folders)
